# multi-cf

./: .gitignore  Cargo.toml  Dockerfile  MAINTAINERS.md  README.md  TECH.md  docker-compose.yml  entrypoint.sh  todo.txt
.github/: release.yml
.github/workflows/: build-release.yml  ci-cargo-audit.yml  ci-pr.yml  ci-tags.yml  clippy.yml  integration-tests.yml  main-and-pr.yml  pr.yml  rust-cache.yml  security-audit.yml  tags.yml  unit-tests.yml  version-bump.yml
cli/: Cargo.toml
cli/src/: cli.rs  environment.rs  exec.rs  login.rs  main.rs  options.rs  subcommands.rs
cli/tests/: e2e.rs  integration_test.rs
cli/tests/fixtures/expected-add-environment/: settings.yml
cli/tests/fixtures/expected-remove-environment/: settings.yml
integration/: Cargo.toml  Dockerfile  entrypoint.sh  run-locally.sh
integration/test-data/: README.md
integration/test-data/wiremock/__files/: login.json  v3-processes.json  v3-routes.json
integration/test-data/wiremock/mappings/: api.json  app-stats.json  apps.json  login.json  oauth-token.json  routes.json
integration/tests/: cli.rs  integration_test.rs
lib/: Cargo.toml  build.rs
lib/src/: cf.rs  environment.rs  exec.rs  lib.rs  options.rs  settings.rs
src/: cf.rs  cli.rs  environment.rs  exec.rs  login.rs  main.rs  settings.rs  subcommands.rs
test-data/: README.md  run-wiremock-docker.sh
test-data/wiremock/__files/: api-response.json  app-stats-frontend-statics.json  app-stats-java-service.json  login.json  oauth-token.json  v3-apps.json  v3-organizations.json  v3-processes.json  v3-routes.json  v3-spaces.json
test-data/wiremock/mappings/: organizations.json  spaces.json
tests/: cli.rs
tests/fixtures/environment-1/: settings.yml
tests/fixtures/environment-2/: settings.yml
