[package]
name = "cf-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.9.9"
dirs = "4.0.0"
config = "0.13.2"
anyhow = "1.0.62"
colored = "2.0.0"
rand = "0.8.5"
rayon = "1.5.3"