[package]
name = "mcf"
version = "0.17.0"
edition = "2021"
default-run = "mcf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[profile.dev]
opt-level = 0

[dependencies]
clap_complete = "4.5.2"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
anyhow = "1.0.82"
log = "0.4.21"
env_logger = "0.11.3"
prettytable-rs = "0.10.0"
lib = { path = "../lib" }
tokio = { version = "1.37.0", features = ["full"] }