[package]
name = "mcf"
version = "0.17.0"
edition = "2021"
default-run = "mcf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[profile.dev]
opt-level = 0

[dependencies]
clap_complete = "4.6.0"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.10"
prettytable-rs = "0.10.0"
lib = { path = "../lib" }
tokio = { version = "1.50.0", features = ["full"] }
