[package]
name = "lib"
version = "0.17.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[profile.dev]
opt-level = 0

[dependencies]
anyhow = "1.0.62"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
env_logger = "0.9.0"
gag = "1.0.0"