[package]
name = "lib"
version = "0.17.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[profile.dev]
opt-level = 0

[dependencies]
anyhow = "1.0.77"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.29"
tokio = { version = "1", features = ["full"] }
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9.0"
env_logger = "0.10.1"
gag = "1.0.0"